626: css for email color changes (#339)
626: css for email color changes (#339)

--- a/src/main/resources/templates/account_verify_email.html
+++ b/src/main/resources/templates/account_verify_email.html
@@ -8,8 +8,8 @@
   <table style="width: 600px; margin-left: auto; margin-right: auto;">
     <tr>
       <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
-        <img alt="logo" style="width: 100%; height: 100%;"
-             th:src="${frontEndAddress} + 'image/colorlogo.png'"
+        <img alt="logo" style="width: 165px; height: 33px;"
+             th:src="${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'"
              title="logo">
       </td>
     </tr>
@@ -30,7 +30,7 @@
     </tr>
     <tr>
       <td style="display: block; margin: 20px auto 10px auto; width: 100%;">
-        <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #488eff; border: 1px solid transparent;cursor: pointer; display: block; width: 150px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
+        <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 150px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
            th:href="@{${frontEndAddress} + ${accountVerifyAddress}}">
           Confirm your email
         </a>
