--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -16,8 +16,8 @@
     <tbody>
     <tr align="center" style="width: 565px">
       <td style="padding-bottom: 20px;">
-        <img style="width: 165px; height: 38px"
-             th:src="@{${frontEndAddress} + 'image/colorlogo.png'}">
+        <img style="width: 165px; height: 33px"
+             th:src="@{${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'}">
       </td>
     </tr>
 
@@ -43,7 +43,7 @@
           </tr>
           <tr>
             <td align="center">
-              <a style="text-decoration: none; color: #488eff" th:href="@{${helpUrl}}">Help</a>
+              <a style="text-decoration: none; color: #0075DF" th:href="@{${helpUrl}}">Help</a>
             </td>
           </tr>
         </table>
