--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -12,8 +12,8 @@
     <tr>
       <td style="padding-top: 54px; height: 44px; padding-bottom: 30px; text-align: center;">
         <img
-                style="width: 189px; height: 100%; min-height: 43px; margin-left: auto; margin-right: auto; display: block;"
-                alt="logo" title="logo" th:src="@{${frontEndAddress} + 'image/colorlogo.png'}">
+                style="width: 165px; height: 33px; min-height: 43px; margin-left: auto; margin-right: auto; display: block;"
+                alt="logo" title="logo" th:src="@{${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'}">
       </td>
     </tr>
     <tr style="width: 600px; height: 385px;">
@@ -36,7 +36,7 @@
                 <tr>
                   <td style="padding-top: 33px; height: 40px; text-align: center; padding-bottom: 47px;">
                     <a th:href="@{${createPasswordAddress}}"
-                       style="background-color: #488eff; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; cursor: pointer; display: inline-block; line-height: 42px; text-decoration: none">Get
+                       style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; cursor: pointer; display: inline-block; line-height: 42px; text-decoration: none">Get
                       Started</a></td>
                 </tr>
                 </tbody>
