--- a/src/main/resources/templates/password_change_email.html
+++ b/src/main/resources/templates/password_change_email.html
@@ -38,7 +38,7 @@
         <td style="width:315px; text-align: center;">
         <span style="font-size: 15px; color: grey;">
           if you did not request change, please check with your account admin. If your account
-          admin did not make this change, please <a style="text-decoration: none; color: #488eff" th:href="@{${contactUrl}}">contact us</a>
+          admin did not make this change, please <a style="text-decoration: none; color: #0075DF" th:href="@{${contactUrl}}">contact us</a>
  to retrieve your account.
         </span>
         </td>
