--- a/src/main/resources/templates/time_off_request_deny.html
+++ b/src/main/resources/templates/time_off_request_deny.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-<table style="border-spacing: 0px;">
+<table style="border-spacing: 0px;width: 100%;">
   <tbody style="width: 552px;border-radius: 4px;
   font-size: 14px;font-family: Roboto;background-color: #ffffff;"
   >
   <tr>
 
-    <td align="center" style="width: 552px;padding: 15px;color: #2e3033; background: #ffefef;">
-      <img style="width: 19px;height: 20px;margin-right: 8px;"
+    <td align="center" style="width: 552px;padding: 15px;color: #2e3033; background: #FFF2F3;">
+      <img style="width: 19px;height: 20px;vertical-align: -5px;"
            th:src="@{${frontEndAddress}+'image/deny.svg'}">
       &nbsp;&nbsp;
       <span>Denied by</span>&nbsp;
