--- a/src/main/resources/templates/time_off_request_approve.html
+++ b/src/main/resources/templates/time_off_request_approve.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-<table style="border-spacing: 0px;">
+<table style="border-spacing: 0px;width: 100%;">
   <tbody style="width: 552px;border-radius: 4px;
   font-size: 14px;font-family: Roboto;background-color: #ffffff;">
 
   <tr>
     <td align="center"
-        style="width: 522px;padding: 15px;background-color: #f3fffd; color: #2e3033;">
-      <img style="width: 19px;height: 20px;margin-right: 8px;"
+        style="width: 522px;padding: 15px;background-color: #EFFFF6; color: #2e3033;">
+      <img style="width: 19px;height: 20px;vertical-align: -5px;"
            th:src="@{${frontEndAddress}+'image/approve.svg'}">
       &nbsp;&nbsp;
       <span>Approved by</span>&nbsp;
