--- a/src/main/resources/templates/time_off_request_pending.html
+++ b/src/main/resources/templates/time_off_request_pending.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <table
-    style="width: 552px;border-radius: 4px; border-spacing: 0px; font-size: 14px;font-family: Roboto;background-color: #ffffff;">
+    style="width: 100%;border-radius: 4px; border-spacing: 0px; font-size: 14px;font-family: Roboto;background-color: #ffffff;">
   <tbody>
   <tr>
     <td align="center"
-        style="width: 522px;padding: 15px;background-color: #fff9f1; color: #2e3033;">
-      <img style="width: 19px;height: 20px;margin-right: 8px;"
+        style="width: 552px;padding: 15px;background-color: #FFF5EF; color: #2e3033;">
+      <img style="width: 19px;height: 20px;vertical-align: -5px;"
            th:src="@{${frontEndAddress}+'image/pending.svg'}">
       &nbsp;&nbsp;Awaiting your approval
     </td>
@@ -66,13 +66,13 @@
                 <td align="right" style="padding-right: 10px;">
                   <a style="text-decoration: none;padding:9px 41px;cursor: pointer; margin: auto; width: 120px; border-radius: 20px; border: solid 1px #d8dadf; background-color: white;"
                      th:href="@{${frontEndAddress}+'time-off/requests'}">
-                    <span style="line-height: 40px; color: #488eff;">Deny</span>
+                    <span style="line-height: 40px; color: #0075DF;">Deny</span>
 
                   </a>
                 </td>
 
                 <td align="left" style="padding-left: 10px">
-                  <a style="text-decoration: none;padding:9px 32px;cursor: pointer;margin: auto; width: 120px; border-radius: 20px; background-color: #488eff;"
+                  <a style="text-decoration: none;padding:9px 32px;cursor: pointer;margin: auto; width: 120px; border-radius: 20px; background-color: #0075DF;"
                      th:href="@{${frontEndAddress}+'time-off/requests'}">
 
                     <span style="line-height: 40px;color: white">Approve</span>
@@ -87,7 +87,7 @@
         <tr style="background: #f7f8fa; width: 552px">
           <td align="center"
               style="width: 552px; margin: auto; font-size: 14px; width: fit-content; padding: 30px;">
-            <a style="color: #488eff;cursor: pointer; text-decoration: none;"
+            <a style="color: #0075DF;cursor: pointer; text-decoration: none;"
                th:href="@{${frontEndAddress}+'time-off/requests'}">View Full
               Details
             </a>
