651: svg image not loading in gmail (#344)
651: svg image not loading in gmail (#344)

--- a/src/main/resources/templates/password_change_email.html
+++ b/src/main/resources/templates/password_change_email.html
@@ -10,9 +10,7 @@
   <table style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
     <tr>
       <td style="line-height: 1.38; text-align: center;">
-        <img alt="logo" style="width: 100%; height: 100%;"
-             th:src="${frontEndAddress} + 'image/alert.svg'"
-        title="logo">
+        <img alt="logo" th:src="${frontEndAddress} + 'image/alert.png'" title="logo">
       </td>
     </tr>
     <tr>
