--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -20,7 +20,7 @@
                 <td>
                   <img
                       style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-                      th:src="${requesterImageUrl} ? ${pathPrefix+requesterImageUrl} : ${frontEndAddress}+'image/person.svg'"
+                      th:src="${requesterImageUrl} ? ${pathPrefix+requesterImageUrl} : ${frontEndAddress}+'image/person.png'"
                   >
                 </td>
               </tr>
@@ -82,7 +82,7 @@
                 <td>
                   <img
                       style="float: right; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-                      th:src="${approverComment.user.getImageUrl()} ? ${pathPrefix+approverComment.user.getImageUrl()} : ${frontEndAddress}+'image/person.svg'"
+                      th:src="${approverComment.user.getImageUrl()} ? ${pathPrefix+approverComment.user.getImageUrl()} : ${frontEndAddress}+'image/person.png'"
                   >
                 </td>
               </tr>
@@ -104,7 +104,7 @@
   font-size: 16px; text-align: center; line-height: 1.56;  width: 277px;
   height: 156px; border-radius: 5px;">
       <img style="margin: 10px auto; height: 60px; width: 60px;"
-           th:src="@{${frontEndAddress}+'image/timeOff.svg'}">
+           th:src="@{${frontEndAddress}+'image/timeOff.png'}">
 
       <div style="font-weight: 500" th:text="${type}">Vacation</div>
 
@@ -125,7 +125,7 @@
         <td>
           <img
               style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-              th:src="${requesterImageUrl} ? ${pathPrefix+requesterImageUrl} : ${frontEndAddress}+'image/person.svg'"
+              th:src="${requesterImageUrl} ? ${pathPrefix+requesterImageUrl} : ${frontEndAddress}+'image/person.png'"
           >
           &nbsp;&nbsp;
         </td>
