--- a/src/main/resources/templates/document_request_signature.html
+++ b/src/main/resources/templates/document_request_signature.html
@@ -13,7 +13,7 @@
     <tbody>
     <tr>
       <td style="width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: #FFF5EF; padding: 14px">
-        <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;" th:src="@{${frontEndAddress}+'image/pending.svg'}" />
+        <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;" th:src="@{${frontEndAddress}+'image/pending.png'}" />
         Awaiting Your Signature
         <span th:if="${dueDate} != null" th:text="'- Due ' + ${dueDate}" style="color: #7b7e84;"></span>
       </td>
@@ -35,7 +35,7 @@
             <td style="text-align: center" colspan="3">
               <div class="rectangle-card"
                    style="width: 277px; height: 100px; border-radius: 5px; border: solid 1px #dfe2e9; background-color: #ffffff; padding: 21px 0 0 13px; margin: auto;">
-                <img alt="document" style="width: 40px; height: 45px;" th:src="@{${frontEndAddress}+'image/document.svg'}">
+                <img alt="document" style="width: 40px; height: 45px;" th:src="@{${frontEndAddress}+'image/document.png'}">
                 <div th:text="${documentTitle}"></div>
               </div>
             </td>
