--- a/src/main/resources/templates/time_off_request_pending.html
+++ b/src/main/resources/templates/time_off_request_pending.html
@@ -32,7 +32,7 @@
           <td
               style="border-top: solid 1px #dfe2e9;padding: 20px 0; margin: 0 30px; font-weight: 500; align-items: center;">
             Remaining Balance if Approved:
-            <span th:text="${remain} + (${remain} > 1 ? ' Hours': 'Hour')"></span>
+            <span th:text="${remain} + (${remain} == 1 ? ' Hour': ' Hours')"></span>
           </td>
         </tr>
         <tr>
