794: time off bug time off request review email not formatting dates correctly (#436)
* add logic of dates split

* Add test

* change code by review

* code format

--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -102,7 +102,7 @@
   <td>
     <div style="margin: auto; padding-top: 10px; border: solid 1px #dfe2e9;
   font-size: 16px; text-align: center; line-height: 1.56;  width: 277px;
-  height: 156px; border-radius: 5px;">
+  border-radius: 5px;">
       <img style="margin: 10px auto; height: 60px; width: 60px;"
            th:src="@{${frontEndAddress}+'image/timeOff.png'}">
 
