794: Time off bug time off request review email not formatting dates correctly (#447)
* fix bug and add some tests

* rename field

* format email, take the hours of time off request to a new line

--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -109,7 +109,8 @@
       <div style="font-weight: 500" th:text="${type}">Vacation</div>
 
       <div style="padding-bottom: 20px;font-size: 16px;line-height: 1.5; text-align: center;">
-        <span th:text="${timeRange}"></span>&nbsp;(<span th:text="${hours}"></span>&nbsp;hours)
+        <span th:text="${timeRange}"></span>
+        <div>(<span th:text="${hours}"></span>&nbsp;hours)</div>
       </div>
     </div>
   </td>
