--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -34,8 +34,11 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="padding-top: 33px; height: 40px; text-align: center; padding-bottom: 47px;">
-                    <a th:href="@{${createPasswordAddress}}"
+                  <td th:switch="${createPasswordAddress}" style="padding-top: 33px; height: 40px; text-align: center; padding-bottom: 47px;">
+                    <div th:case="'#'"
+                       style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; display: inline-block; line-height: 42px; text-decoration: none">Get
+                      Started</div>
+                    <a th:case="*" th:href="@{${createPasswordAddress}}"
                        style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; cursor: pointer; display: inline-block; line-height: 42px; text-decoration: none">Get
                       Started</a></td>
                 </tr>
