--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -12,7 +12,7 @@
     <tr>
       <td style="padding-top: 54px; height: 44px; padding-bottom: 30px; text-align: center;">
         <img
-                style="width: 165px; height: 33px; min-height: 43px; margin-left: auto; margin-right: auto; display: block;"
+                style="width: 202px; height: 37px; margin-left: auto; margin-right: auto; display: block;"
                 alt="logo" title="logo" th:src="@{${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'}">
       </td>
     </tr>
