--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -31,15 +31,7 @@
                   </div>
                 </td>
               </tr>
-              <tr>
-                <td style="text-align: center" colspan="3">
-                  <div class="rectangle-card"
-                       style="width: 277px; height: 100px; border-radius: 5px; border: solid 1px #dfe2e9; background-color: #ffffff; padding: 21px 0 0 13px; margin: auto;">
-                    <img alt="document" style="width: 40px; height: 45px;" th:src="@{${frontEndAddress}+'image/document.png'}">
-                    <div th:text="${documentTitle}"></div>
-                  </div>
-                </td>
-              </tr>
+              <tr th:replace="components/document_components::title"></tr>
             <tr>
               <td colspan="3">
                 <div class="button-card" style="padding-bottom: 30px; border-bottom: solid 1px #dfe2e9;">
@@ -49,11 +41,7 @@
                 </div>
               </td>
             </tr>
-            <tr>
-              <td colspan="3">
-                <div class="annotation-card" style="margin-top: 27px; font-size: 14px; line-height: 1.36; color: #606163; word-break: break-word;text-align: center" th:text="${message}"></div>
-              </td>
-            </tr>
+              <tr th:replace="components/document_components::message"></tr>
             </tbody>
           </table>
         </td>
