1071: Documents Bug - Email bugs (#534)

--- a/src/main/resources/templates/document_request_no_action.html
+++ b/src/main/resources/templates/document_request_no_action.html
@@ -20,7 +20,7 @@
               <div class="card-title" style="margin: auto; height: 45px; width: fit-content; margin-bottom: 20px;">
                 <img style="width: 47px;height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}" />
                 <span th:text="${senderName}" style="color: #0075DF; width: fit-content"></span>
-                &nbsp;Sent You a Document
+                Sent You a Document
               </div>
             </td>
           </tr>
