--- a/src/main/resources/templates/time_off_request_pending.html
+++ b/src/main/resources/templates/time_off_request_pending.html
@@ -16,7 +16,7 @@
         style="width: 552px;padding: 15px;background-color: #FFF5EF; color: #2e3033;">
       <img style="width: 19px;height: 20px;vertical-align: -5px;"
            th:src="@{${frontEndAddress}+'image/pending.png'}">
-      &nbsp;&nbsp;Awaiting your approval
+      Awaiting your approval
     </td>
   </tr>
   <tr th:replace="components/request::requster" style="margin: 20px">
