--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -36,7 +36,7 @@
                     style="float:right; width: 420px; border-radius: 5px; border: solid 1px #dfe2e9; position: relative;">
 
                   <div
-                      style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 15px 15px 0; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
+                      style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
                       th:text="${comment}">
                   </div>
                 </td>
@@ -64,7 +64,7 @@
                     style="width: 420px; border-radius: 5px; border: solid 1px #dfe2e9; position: relative; float: left">
 
                   <div
-                      style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 0 15px 15px; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
+                      style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
                       th:text="${approverComment.comment}">
                   </div>
 
@@ -139,7 +139,7 @@
                 <a style="color: #0075DF;text-decoration: none;"
                    th:href="@{${frontEndAddress}+'employees/'+${requesterId}}"
                    th:text="${requesterName}">name</a>
-                &nbsp;Requested Time Off
+                Requested Time Off
               </td>
             </tr>
             </tbody>
