1071: Documents bug email bugs (#539)

--- a/src/main/resources/templates/time_off_request_approve.html
+++ b/src/main/resources/templates/time_off_request_approve.html
@@ -17,7 +17,7 @@
     <td align="center"
         style="width: 522px;padding: 15px;background-color: #EFFFF6; color: #2e3033;">
       <img style="width: 19px;height: 20px;vertical-align: -5px;"
-           th:src="@{${frontEndAddress}+'image/approve.svg'}">
+           th:src="@{${frontEndAddress}+'image/approve.png'}">
       <span>Approved by</span>
       <span th:text="${approverName}">approver name</span>
     </td>
