--- a/src/main/resources/templates/time_off_request_deny.html
+++ b/src/main/resources/templates/time_off_request_deny.html
@@ -17,7 +17,7 @@
 
     <td align="center" style="width: 552px;padding: 15px;color: #2e3033; background: #FFF2F3;">
       <img style="width: 19px;height: 20px;vertical-align: -5px;"
-           th:src="@{${frontEndAddress}+'image/deny.svg'}">
+           th:src="@{${frontEndAddress}+'image/deny.png'}">
       <span>Denied by</span>
       <span th:text="${approverName}"></span>
     </td>
