--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html
-    lang="en"
-    th:fragment="layout (content)" xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org"
+  lang="en"
+  th:fragment="layout (content)" xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:th="http://www.thymeleaf.org"
 >
 
 <head>
@@ -38,7 +38,12 @@
           </tr>
           <tr>
             <td align="center">
-              177 Broad St, Stamford, CT 06901
+              2711 Centerville Road, Suite 400
+            </td>
+          </tr>
+          <tr>
+            <td align="center">
+              Wilmington, Delaware 19808
             </td>
           </tr>
         </table>
