1643: Function in Add new employee (#738)
Function in Add new employee

--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html
-  lang="en"
-  th:fragment="layout (content)" xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:th="http://www.thymeleaf.org"
+    lang="en"
+    th:fragment="layout (content)" xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org"
 >
 
 <head>
@@ -11,7 +11,7 @@
         type="text/css">
 </head>
 <body>
-<center style="margin: auto; background-color: #edeef2; width: 615px; padding: 32px 0px">
+<center style="margin: auto; background-color: #f0f2f5; width: 615px; padding: 32px 0px">
   <table align="center" style="padding: -1px 24px; border: 0; width: 600px">
     <tbody>
     <tr align="center" style="width: 565px">
