--- a/src/main/resources/templates/document_request_no_action.html
+++ b/src/main/resources/templates/document_request_no_action.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <section align="center"
-         style="background-color: #edeef2; padding-bottom: 119px; width: 100%;">
+         style="background-color: #f0f2f5; padding-bottom: 119px; width: 100%;">
   <table style="width: 100%; min-height: 465px; border-collapse: collapse;">
     <tbody>
     <tr>
@@ -18,7 +18,7 @@
           <tr>
             <td>
               <div class="card-title" style="margin: auto; height: 45px; width: fit-content; margin-bottom: 20px;">
-                <img style="width: 47px;height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}" />
+                <img style="width: 47px;height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}"/>
                 <span th:text="${senderName}" style="color: #0075DF; width: fit-content"></span>
                 Sent You a Document
               </div>
