--- a/src/main/resources/templates/password_change_email.html
+++ b/src/main/resources/templates/password_change_email.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"
       th:replace="~{base_email :: layout(~{::section})}" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"><head>
+      xmlns:th="http://www.thymeleaf.org">
+<head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
 <section align="center"
-         style="background-color: #edeef2; padding-bottom: 119px; padding-top: 58px; width: 100%;">
+         style="background-color: #f0f2f5; padding-bottom: 119px; padding-top: 58px; width: 100%;">
   <table style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
     <tr>
       <td style="line-height: 1.38; text-align: center;">
