--- a/src/main/resources/templates/document_request_signature.html
+++ b/src/main/resources/templates/document_request_signature.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <section align="center"
-         style="background-color: #edeef2; padding-bottom: 119px; width: 100%;">
+         style="background-color: #f0f2f5; padding-bottom: 119px; width: 100%;">
   <table style="width: 100%; min-height: 465px; border-collapse: collapse;">
     <tbody>
     <tr>
       <td style="width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: #FFF5EF; padding: 14px">
-        <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;" th:src="@{${frontEndAddress}+'image/pending.png'}" />
+        <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;" th:src="@{${frontEndAddress}+'image/pending.png'}"/>
         Awaiting Your Signature
         <span th:if="${dueDate} != null" th:text="'- Due ' + ${dueDate}" style="color: #7b7e84;"></span>
       </td>
@@ -25,7 +25,7 @@
           <tr>
             <td>
               <div class="card-title" style="margin: auto; height: 45px; width: fit-content; margin-bottom: 20px;">
-                <img style="width: 47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}" />
+                <img style="width: 47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}"/>
                 <span th:text="${senderName}" style="color: #0075DF; width: fit-content"></span>
                 Requested Your Signature
               </div>
