--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -6,19 +6,19 @@
   <title th:text="'Welcome to ' + ${companyName} + '!'"></title>
 </head>
 <body>
-<div align="center" style="background-color: #edeef2; padding-bottom: 119px; padding-top: 58px; width: 100%;">
+<div align="center" style="background-color: #f0f2f5; padding-bottom: 119px; padding-top: 58px; width: 100%;">
   <table style="width: 600px; min-height: 459px; border-collapse: collapse;">
     <tbody>
     <tr>
-      <td style="padding-top: 54px; height: 44px; padding-bottom: 30px; text-align: center;">
+      <td style="padding-top: 30px; height: 44px; padding-bottom: 30px; text-align: center;">
         <img
-                style="width: 202px; height: 37px; margin-left: auto; margin-right: auto; display: block;"
-                alt="logo" title="logo" th:src="@{${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'}">
+            style="width: 202px; height: 37px; margin-left: auto; margin-right: auto; display: block;"
+            alt="logo" title="logo" th:src="@{${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'}">
       </td>
     </tr>
     <tr style="width: 600px; height: 385px;">
       <td>
-        <table style="width: 100%; height: 100%; border-collapse: collapse; margin-bottom: 41px;">
+        <table style="width: 100%; height: 100%; border-collapse: collapse; margin-bottom: 15px;">
           <tbody>
           <tr style="width: 100%; height: 233px; background-color: #FFFFFF;">
             <td>
@@ -36,8 +36,9 @@
                 <tr>
                   <td th:switch="${createPasswordAddress}" style="padding-top: 33px; height: 40px; text-align: center; padding-bottom: 47px;">
                     <div th:case="'#'"
-                       style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; display: inline-block; line-height: 42px; text-decoration: none">Get
-                      Started</div>
+                         style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; display: inline-block; line-height: 42px; text-decoration: none">Get
+                      Started
+                    </div>
                     <a th:case="*" th:href="@{${createPasswordAddress}}"
                        style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; cursor: pointer; display: inline-block; line-height: 42px; text-decoration: none">Get
                       Started</a></td>
