--- a/src/main/resources/templates/verify_change_work_email.html
+++ b/src/main/resources/templates/verify_change_work_email.html
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
-<div align="center" style="background-color: #edeef2; padding-bottom: 119px; padding-top: 58px; width: 100%;">
+<div align="center" style="background-color: #f0f2f5; padding-bottom: 119px; padding-top: 58px; width: 100%;">
   <table style="width: 600px; margin-left: auto; margin-right: auto;">
     <tr>
       <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
