--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -24,7 +24,7 @@
           <tbody>
           <tr>
             <td>
-              <div class="card-title" style="margin: auto; height: 45px; width: fit-content; margin-bottom: 20px;line-height: 47px;">
+              <div class="card-title" style="margin: auto; height: 60px; width: fit-content; margin-bottom: 20px;line-height: 32px;font-size: 12px">
                 <img th:if="${senderAvatar}" style="width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}"/>
                 <div
                     th:if="${senderAvatar} == null"
