--- a/src/main/resources/templates/time_off_request_deny.html
+++ b/src/main/resources/templates/time_off_request_deny.html
@@ -27,7 +27,7 @@
 
     <td>
       <table align="center"
-             style="margin-top: 20px; line-height: 35px; border-radius: 4px; width: 488px; padding: 12px 10px; text-align: center; background: #f7f8fa; color: gray;">
+             style="margin-top: 20px; line-height: 1.36; border-radius: 4px; width: 488px; padding: 20px 22px; font-size: 14px; text-align: center; background: #f7f8fa; color: gray;">
         <tbody>
         <tr>
           <td>
