--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -20,12 +20,12 @@
     </tr>
     <tr>
       <td style="display: block">
-        <table style="height: 352px; background-color: white; padding: 26px 32px 30px 32px; width: 100%;">
+        <table style="height: 352px; background-color: white; padding: 26px 25px 30px 25px; width: 100%;">
           <tbody>
           <tr>
             <td>
-              <div class="card-title" style="margin: auto; height: 60px; width: fit-content; margin-bottom: 20px;line-height: 32px;font-size: 12px">
-                <img th:if="${senderAvatar}" style="width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}"/>
+              <div class="card-title" style="margin: auto; width: fit-content; margin-bottom: 32px;line-height: 2;font-size: 14px; letter-spacing: 0.36px;">
+                <img th:if="${senderAvatar}" style="width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 12px;" alt="avatar" th:src="${senderAvatar}"/>
                 <div
                     th:if="${senderAvatar} == null"
                     th:style="|background: ${backgroundColor}| + ';float:left;width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;'"
