1905: add info server controller tests in company (#824)
1905: add info server controller tests in company (#824)

--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <span th:text="${senderName}" style="color: #0075DF; width: fit-content"></span>
-                <span>Requested Your Acknowledgement</span>
+                <span style="display: block;">Requested Your Acknowledgement</span>
               </div>
             </td>
           </tr>
