2064: Use deep linking ur ls in document emails (#869)
2064: Use deep linking ur ls in document emails (#869)

--- a/src/main/resources/templates/document_request_signature.html
+++ b/src/main/resources/templates/document_request_signature.html
@@ -41,7 +41,7 @@
             <td colspan="3">
               <div class="button-card" style="padding-bottom: 30px; border-bottom: solid 1px #dfe2e9;">
                 <a style="margin-top: 30px; text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 151px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
-                   th:href="@{${frontEndAddress} + ${documentUrl}}">Review & Sign
+                   th:href="@{${frontEndAddress} + 'documents'}">Review & Sign
                 </a>
               </div>
             </td>
