--- a/src/main/resources/templates/document_request_acknowledge.html
+++ b/src/main/resources/templates/document_request_acknowledge.html
@@ -12,20 +12,27 @@
   <table style="width: 100%; min-height: 465px; border-collapse: collapse;">
     <tbody>
     <tr>
-      <td style="width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: #FFF5EF; padding: 14px">
-        <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;" th:src="@{${frontEndAddress}+'image/pending.png'}"/>
+      <td
+          style="width: 100%; height: 38px; text-align: center; border-radius: 4px; background-color: #FFF5EF; padding: 14px">
+        <img style="width: 19px;height: 20px;margin-right: 8px; vertical-align: -5px;"
+             th:src="@{${frontEndAddress}+'image/pending.png'}"/>
         Awaiting Your Acknowledgement
-        <span th:if="${dueDate} != null" th:text="'- Due ' + ${dueDate}" style="color: #7b7e84;"></span>
+        <span th:if="${dueDate} != null" th:text="'- Due ' + ${dueDate}"
+              style="color: #7b7e84;"></span>
       </td>
     </tr>
     <tr>
       <td style="display: block">
-        <table style="height: 352px; background-color: white; padding: 26px 25px 30px 25px; width: 100%;">
+        <table
+            style="height: 352px; background-color: white; padding: 26px 25px 30px 25px; width: 100%;">
           <tbody>
           <tr>
             <td>
-              <div class="card-title" style="margin: auto; width: fit-content; margin-bottom: 32px;line-height: 2;font-size: 14px; letter-spacing: 0.36px;">
-                <img th:if="${senderAvatar}" style="width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 12px;" alt="avatar" th:src="${senderAvatar}"/>
+              <div class="card-title"
+                   style="margin: auto; width: fit-content; margin-bottom: 32px;line-height: 2;font-size: 14px; letter-spacing: 0.36px;">
+                <img th:if="${senderAvatar}"
+                     style="width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 12px;"
+                     alt="avatar" th:src="${senderAvatar}"/>
                 <div
                     th:if="${senderAvatar} == null"
                     th:style="|background: ${backgroundColor}| + ';float:left;width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;'"
@@ -40,9 +47,13 @@
           <tr th:replace="components/document_components::title"></tr>
           <tr>
             <td colspan="3">
-              <div class="button-card" style="padding-bottom: 30px; border-bottom: solid 1px #dfe2e9;">
-                <a style="margin-top: 30px; text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 151px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
-                   th:href="@{${frontEndAddress} + ${documentUrl}}">Review & Acknowledge
+              <div class="button-card"
+                   style="padding-bottom: 30px; border-bottom: solid 1px #dfe2e9;">
+                <a
+                    style="margin-top: 30px; text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 151px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
+                    th:href="@{${frontEndAddress} + 'documents/my-documents/' + ${documentRequestId}}">Review
+                  &
+                  Acknowledge
                 </a>
               </div>
             </td>
