--- a/src/main/resources/templates/document_request_no_action.html
+++ b/src/main/resources/templates/document_request_no_action.html
@@ -13,12 +13,16 @@
     <tbody>
     <tr>
       <td style="display: block">
-        <table style="height: 352px; background-color: white; padding: 26px 32px 30px 32px; width: 100%;">
+        <table
+            style="height: 352px; background-color: white; padding: 26px 32px 30px 32px; width: 100%;">
           <tbody>
           <tr>
             <td>
-              <div class="card-title" style="margin: auto; height: 45px; width: fit-content; margin-bottom: 20px;line-height: 47px;">
-                <img th:if="${senderAvatar}" style="width: 47px;height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;" alt="avatar" th:src="${senderAvatar}"/>
+              <div class="card-title"
+                   style="margin: auto; height: 45px; width: fit-content; margin-bottom: 20px;line-height: 47px;">
+                <img th:if="${senderAvatar}"
+                     style="width: 47px;height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;"
+                     alt="avatar" th:src="${senderAvatar}"/>
                 <div
                     th:if="${senderAvatar} == null"
                     th:style="|background: ${backgroundColor}| + ';float:left;width:47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%; margin-right: 14px;'"
@@ -33,9 +37,10 @@
           <tr th:replace="components/document_components::title"></tr>
           <tr>
             <td colspan="3">
-              <div class="button-card" style="padding-bottom: 30px; border-bottom: solid 1px #dfe2e9;">
+              <div class="button-card"
+                   style="padding-bottom: 30px; border-bottom: solid 1px #dfe2e9;">
                 <a style="margin-top: 30px; text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 151px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
-                   th:href="@{${frontEndAddress} + ${documentUrl}}">View
+                   th:href="@{${frontEndAddress} + 'documents/my-documents/' + ${documentRequestId}}">View
                 </a>
               </div>
             </td>
