2302: security users can delete their own approved time off to manipulate hours on limited policy (#928)
2302: security users can delete their own approved time off to manipulate hours on limited policy (#928)

--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -157,7 +157,10 @@
                 <a style="color: #0075DF;text-decoration: none;"
                    th:href="@{${frontEndAddress}+'employees/'+${requesterId}}"
                    th:text="${requesterName}">name</a>
-                Requested Time Off
+                <span th:switch="${isDeleteRequest}">
+                  <span th:case="true">Deleted a Time Off Request</span>
+                  <span th:case="*">Requested Time Off</span>
+                </span>
               </td>
             </tr>
             </tbody>
