2458: Email foot info wrong #966
2458: Email foot info wrong #966

--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -33,7 +33,7 @@
         <table>
           <tr>
             <td align="center">
-              © <span th:if="${currentYear} != null" th:text="${currentYear}"></span> SimplyHireds
+              © <span th:if="${currentYear} != null" th:text="${currentYear}"></span> SimplyHired
             </td>
           </tr>
           <tr>
