2504: adjust document request email styling align on firefox (#996)

--- a/src/main/resources/templates/document_request_signature.html
+++ b/src/main/resources/templates/document_request_signature.html
@@ -24,7 +24,7 @@
           <tbody>
           <tr>
             <td>
-              <div class="card-title" style="margin: auto; width: fit-content; margin-bottom: 20px;height: 100%;line-height: 46px">
+              <div class="card-title" style="margin: auto; width: fit-content; margin-bottom: 20px;height: 100%;line-height: 46px;width: -moz-fit-content;">
                 <img th:if="${senderAvatar}" style="width: 47px; height: 47px; vertical-align: -18px; border: 1px solid #dfe2e9; border-radius: 50%;margin-right: 14px;" alt="avatar" th:src="${senderAvatar}"/>
                 <div
                     th:if="${senderAvatar} == null"
