--- a/src/main/resources/templates/components/document_components.html
+++ b/src/main/resources/templates/components/document_components.html
@@ -22,5 +22,48 @@
   </td>
 </tr>
 
+<tr
+    th:fragment="requster"
+    th:style="'font-size:' + @{(${#strings.length(senderName)} > 34 ? '14px' : '18px')} + '; line-height: ' + @{(${#strings.length(senderName)} > 34 ? '1.36' : '0.78')} + ';height: 46px;color: #2e3033; letter-spacing: 0.4px;'">
+  <td align="center" style="padding: 15px">
+    <table>
+      <tbody>
+      <tr>
+        <td>
+          <img
+              th:if="${senderAvatar}"
+              style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
+              th:src="${senderAvatar}"
+          />
+          &nbsp;
+          <div
+              th:if="${senderAvatar} == null"
+              th:style="|background: ${backgroundColor}| + ';width: 45px;height: 45px; border-radius: 50%; color: white; text-align: center;vertical-align: middle;line-height: 45px;'"
+              th:text="${avatarText}">
+          </div>&nbsp;
+        </td>
+
+        <td>
+          <table>
+            <tbody>
+            <tr>
+              <td style="padding: 10px 0">
+                <span th:text="${senderName}" style="color: #0075DF; width: fit-content"></span>
+                <span th:switch="${requestType}">
+                  <span th:case="SIGN">Requested Your Signature</span>
+                  <span th:case="ACKNOWLEDGE">Requested Your Acknowledgement</span>
+                  <span th:case="VIEW">Sent You a Document</span>
+                </span>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </td>
+</tr>
+
 </body>
 </html>
