--- a/src/main/resources/templates/time_off_request_deny.html
+++ b/src/main/resources/templates/time_off_request_deny.html
@@ -40,10 +40,19 @@
     </td>
   </tr>
 
+  <tr>
+    <td style="display: block">
+      <table
+          style="height: 352px; background-color: white; padding: 26px 25px 30px 25px; width: 100%;">
+        <tbody>
+          <tr th:if="${toManager}" th:replace="components/request::requster"></tr>
 
-  <tr th:if="${toManager}" th:replace="components/request::requster"></tr>
+          <tr th:replace="components/request::time"></tr>
+        </tbody>
+      </table>
+    </td>
+  </tr>
 
-  <tr th:replace="components/request::time"></tr>
 
   <tr>
     <td style="padding-top: 15px;">
