--- a/src/main/resources/templates/time_off_request_pending.html
+++ b/src/main/resources/templates/time_off_request_pending.html
@@ -19,10 +19,20 @@
       Awaiting your approval
     </td>
   </tr>
-  <tr th:replace="components/request::requster" style="margin: 20px">
-  </tr>
 
-  <tr th:replace="components/request::time"></tr>
+  <tr>
+    <td style="display: block">
+      <table
+          style="height: 352px; background-color: white; padding: 26px 25px 30px 25px; width: 100%;">
+        <tbody>
+          <tr th:replace="components/request::requster" style="margin: 20px">
+          </tr>
+
+          <tr th:replace="components/request::time"></tr>
+        </tbody>
+      </table>
+    </td>
+  </tr>
 
   <tr>
     <td style="padding-top: 15px;">
