--- a/src/main/resources/templates/password_reset_email.html
+++ b/src/main/resources/templates/password_reset_email.html
@@ -4,31 +4,38 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
-  <div align="center" style="background-color: #edeef2; padding-bottom: 119px; padding-top: 58px; width: 100%;">
-      <table style="width: 600px; margin-left: auto; margin-right: auto;">
-          <tr><td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
-              <img alt="logo" style="width: 202px; height: 37px;"
-                   th:src="${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'"
-                   title="logo">
-          </td>
-          </tr>
-      </table>
-      <table style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
-          <tr><td style="font-size: 24px; line-height: 1.38; color: #2e3033; text-align: center; padding-top: 10px; padding-bottom: 20px;">
-              Forgot Your Password?
-          </td>
-          </tr>
-          <tr><td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
-              <span>No problem! We'll help you create a new one.</span>
-          </td>
-          </tr>
-          <tr><td style="display: block; margin: 20px auto 10px auto; width: 100%;">
-              <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 150px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
-                 th:href="@{${frontEndAddress} + ${passwordResetAddress} + '/' + ${toEmailAddress}}">Reset Password
-              </a>
-          </td>
-          </tr>
-      </table>
-  </div>
+<div align="center"
+     style="background-color: #edeef2; padding-bottom: 119px; padding-top: 58px; width: 100%;">
+  <table style="width: 600px; margin-left: auto; margin-right: auto;">
+    <tr>
+      <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
+        <img alt="logo" style="width: 202px; height: 37px;"
+             th:src="${frontEndAddress} + 'image/FullWidthSimplyHiredLogo.png'"
+             title="logo">
+      </td>
+    </tr>
+  </table>
+  <table
+      style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
+    <tr>
+      <td style="font-size: 24px; line-height: 1.38; color: #2e3033; text-align: center; padding-top: 10px; padding-bottom: 20px;">
+        Forgot Your Password?
+      </td>
+    </tr>
+    <tr>
+      <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
+        <span>No problem! We'll help you create a new one.</span>
+      </td>
+    </tr>
+    <tr>
+      <td style="display: block; margin: 20px auto 10px auto; width: 100%;">
+        <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #0075DF; border: 1px solid transparent;cursor: pointer; display: block; width: 150px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;"
+           th:href="@{${frontEndAddress} + ${passwordResetAddress} + '/' + ${toEmailAddress} + '/' + ${companyId}}">Reset
+          Password
+        </a>
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 </html>
