2640: improve delete time-off request email style (#1067)

--- a/src/main/resources/templates/components/document_components.html
+++ b/src/main/resources/templates/components/document_components.html
@@ -29,7 +29,7 @@
     <table>
       <tbody>
       <tr>
-        <td>
+        <td style="line-height: 0px;">
           <img
               th:if="${senderAvatar}"
               style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
