--- a/src/main/resources/templates/time_off_request_delete.html
+++ b/src/main/resources/templates/time_off_request_delete.html
@@ -11,10 +11,19 @@
 <table
     style="width: 100%;border-radius: 4px; border-spacing: 0px; font-size: 14px;font-family: Roboto;background-color: #ffffff;">
   <tbody>
-  <tr th:replace="components/request::requster" style="margin: 20px">
-  </tr>
+  <tr>
+    <td style="display: block">
+      <table
+          style="height: 352px; background-color: white; padding: 26px 25px 30px 25px; width: 100%;">
+        <tbody>
+        <tr th:replace="components/request::requster"></tr>
 
-  <tr th:replace="components/request::time"></tr>
+        <tr th:replace="components/request::time" style="margin: 20px">
+        </tr>
+        </tbody>
+      </table>
+    </td>
+  </tr>
 
   <tr>
     <td style="padding-top: 15px;">
