--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -135,7 +135,7 @@
     <table>
       <tbody>
       <tr>
-        <td>
+        <td style="line-height: 0px;">
           <img
               th:if="${requesterImageUrl}"
               style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
