3017: combine step 2 and step 3 of adding employee (#1146)
3017: combine step 2 and step 3 of adding employee (#1146)

--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div align="center"
-     style="background-color: #f0f2f5; padding-bottom: 119px; padding-top: 58px; width: 100%;">
+     style="background-color: #f0f2f5; padding-bottom: 105px; padding-top: 105px; width: 100%;">
   <table style="width: 600px; min-height: 459px; border-collapse: collapse;">
     <tbody>
     <tr>
@@ -32,8 +32,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="padding-top: 17px; height: 21px; width: 230px; text-align: center; color: #7B7E84;">
-                    Let's get your account set up
+                  <td th:text="${companyName} + ' has invited you to create an account on the SimplyHired HRIS. Let\'s get it set up.'"
+                      style="padding-top: 17px; height: 21px; width: 230px; text-align: center; color: #7B7E84;">
                   </td>
                 </tr>
                 <tr>
@@ -47,19 +47,6 @@
                     <a th:case="*" th:href="@{${createPasswordAddress}}"
                        style="background-color: #0075DF; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; cursor: pointer; display: inline-block; line-height: 42px; text-decoration: none">Get
                       Started</a></td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          <tr style="width: 100%; background-color: #f7f8fa; padding: 1px;">
-            <td>
-              <table style="font-size: 14px; color: #7b7e84; height: 100%; width: 100%;">
-                <tbody>
-                <tr>
-                  <td style="padding: 15px 35px 15px 35px; max-width: 600px; height: auto; word-break: break-word;"
-                      th:utext="${welcomeMessage}">
-                  </td>
                 </tr>
                 </tbody>
               </table>
